# rdk-imu-module-sdk

./: LICENSE  Makefile  README.md  README_cn.md
core/: Makefile  test
core/examples/: test.c
core/include/: rdk_imu_module.h  rdkimu.h
core/src/: rdk_imu_module.c  rdk_imu_module_bus.c  rdkimu.c  rdkimu_bus.c  rdkimu_priv.h
python/: Makefile  setup.py
python/examples/: imu_stress_test.py  test_imu.py
python/rdkimu/: __init__.py  imu.py
ros2/src/rdk_imu_module/: CMakeLists.txt  package.xml
ros2/src/rdk_imu_module/launch/: rdk_imu.launch.py
ros2/src/rdk_imu_module/scripts/: imu_stress_test.py
ros2/src/rdk_imu_module/src/: rdk_imu_node.cpp
